[package]
name = "pixeldust-wip"
version = "0.0.1"
edition = "2021"
publish = false

[dependencies]
image = "0.24"
bitvec = "1.0.1"
anyhow = "1.0.80"
lazy_static = "1.4.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0.115"
clap = { version = "4.5", features = ["derive", "env"] }
config = "0.14"
rayon = "1.10"
chrono = "0.4.37"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }

[dev-dependencies]
assert_cmd = "*"
assert_fs = "*"
predicates = "*"